# love-letter-engine

./: .gitignore  CONTEXT.md  PHASE2_REVIEW.md  PHASE2_SUMMARY.md  PLAN.md  README.md  agents.md  game_info_&_rules.md  pyproject.toml
.github/workflows/: ci.yml
docs/: card-art-prompts.md
docs/adr/: 0001-class-based-engine.md  0002-strategy-pattern-for-card-effects.md  0003-rest-reactive-api.md  0004-strict-validation-with-violations.md  0005-property-based-testing-strategy.md  0006-no-persistence-in-v1.md  0007-handmaid-protection-tracking.md  0008-spy-bonus.md  0009-chancellor-simplification.md
love_letter/: __main__.py  driver.py
love_letter/api/: app.py  schemas.py
love_letter/bots/: __init__.py  examples.py
love_letter/engine/: engine.py  errors.py  legal_actions.py
love_letter/models/: action.py  card.py  player.py  state.py
love_letter/simulation/: __init__.py
tests/: test_action.py  test_action_pydantic.py  test_api_actions.py  test_api_full_game.py  test_api_games.py  test_baron_effect.py  test_bot_protocol.py  test_card.py  test_chancellor_effect.py  test_cli.py  test_countess_effect.py  test_driver.py  test_engine.py  test_errors.py  test_guard_effect.py  test_handmaid_effect.py  test_handmaid_protection.py  test_king_effect.py  test_legal_actions.py  test_perf_smoke.py  test_played_cards_response.py  test_player.py  test_priest_effect.py  test_prince_effect.py  test_princess_effect.py  test_properties.py  test_simulation.py  test_spy_bonus.py  test_spy_effect.py  test_state.py
web/: README.md
web/src/: App.tsx  Card.tsx  CreateGame.tsx  (+3 more)
(+10 files in other folders)
