[project]
name = "love-letter"
version = "0.1.0"
description = "A robust backend engine for Love Letter card game."
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["httpx>=0.27,<0.28"]

[project.optional-dependencies]
dev = ["pytest>=8.0", "hypothesis>=6.0"]
test = [
    "pytest>=8.0",
    "hypothesis>=6.0",
    "fastapi>=0.115,<0.116",
    "uvicorn>=0.30,<0.31",
    "anyio>=4.8,<4.10",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
